routers between login and register

--- a/views/admin/register.html
+++ b/views/admin/register.html
@@ -57,9 +57,9 @@
 				</form>
 
 				<p class="more-link">
-					<a href="siteUrl()">返回首页</a>
+					<a href="/">返回首页</a>
 					&bull;
-					<a href="adminUrl('login.php')">用户登录</a>
+					<a href="/login">用户登录</a>
 				</p>
 			</div>
 		</div>
