--- a/views/admin/login.html
+++ b/views/admin/login.html
@@ -17,7 +17,7 @@
 		<div class="typecho-login-wrap">
 			<div class="typecho-login">
 				<h1><a href="http://typecho.org" class="i-logo">Typecho</a></h1>
-				<form action="login" method="post" name="login" role="form">
+				<form action="/login" method="post" name="login" role="form">
 					<p>
 						<label for="name" class="sr-only">用户名</label>
 						<input
@@ -53,8 +53,8 @@
 				</form>
 
 				<p class="more-link">
-					<a href="siteUrl()">返回首页</a>
-					<a href="registerUrl()">用户注册</a>
+					<a href="/">返回首页</a>
+					<a href="/register">用户注册</a>
 				</p>
 			</div>
 		</div>
